--- a/modulo3/exercicios/ex022/fundo006.html
+++ b/modulo3/exercicios/ex022/fundo006.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Document</title>
     <style>
         body {
-            height: 97vh;
-            background-image: url('imagens/wallpaper005.jpg');
-            background-size: 100% 20%;
+            height: 100vh;
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+        }
+        main {
+            background-color: white;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 1px solid darkblue;
+            border-radius: 15px;
         }
     </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel recusandae minus nemo alias esse quis animi placeat dignissimos, ex eligendi quaerat, quos inventore assumenda? Tempore sint labore suscipit voluptate error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur eius totam quisquam cum, velit animi eos sit voluptatibus sunt delectus facere temporibus natus beatae repellat. Dolorum voluptatum aut neque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, rem illo harum, optio inventore porro, dignissimos esse accusantium ad blanditiis autem nulla nemo tenetur architecto. Totam quam perspiciatis velit quasi!</p>
+    </main>
 </body>
 </html>
