--- a/modulo3/desafios/d013-feito-sozinho/mesclagem-celula.html
+++ b/modulo3/desafios/d013-feito-sozinho/mesclagem-celula.html
@@ -95,19 +95,19 @@
     <table>
       <thead>
         <tr>
-          <th rowspan="2">Área</th>
-          <th rowspan="2">Disciplinas</th>
-          <th colspan="2">Notas</th>
-          <th rowspan="2">Média</th>
+          <th rowspan="2" scope="col">Área</th>
+          <th rowspan="2" scope="col">Disciplinas</th>
+          <th colspan="2" scope="col">Notas</th>
+          <th rowspan="2" scope="col">Média</th>
         </tr>
         <tr>
-          <th>Nota 1</th>
-          <th>Nota 2</th>
+          <th scope="col">Nota 1</th>
+          <th scope="col">Nota 2</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td rowspan="4">Exatas</td>
+          <th rowspan="4" scope="rowgroup">Exatas</th>
           <td>Matemática</td>
           <td>0.0</td>
           <td>0.0</td>
@@ -132,11 +132,11 @@
           <td>0.0</td>
         </tr>
         <tr class="total">
-          <th class="media" colspan="4">Média de Exatas</th>
+          <th class="media" colspan="4" scope="row">Média de Exatas</th>
           <td>0.0</td>
         </tr>
         <tr>
-          <td rowspan="2">Humanas</td>
+          <th rowspan="2" scope="row">Humanas</th>
           <td>História</td>
           <td>0.0</td>
           <td>0.0</td>
@@ -149,7 +149,7 @@
           <td>0.0</td>
         </tr>
         <tr class="total">
-          <th class="media" colspan="4">Média de Humanas</th>
+          <th class="media" colspan="4" scope="row">Média de Humanas</th>
           <td>0.0</td>
         </tr>
       </tbody>
