iframe03 novas atualizações

--- a/modulo3/exercicios/ex024/iframe03.html
+++ b/modulo3/exercicios/ex024/iframe03.html
@@ -40,7 +40,16 @@
       doloribus cum.
     </p>
 
-    <iframe src="" id="tela" name="frame"
+    <iframe
+      id="tela"
+      name="frame"
+      srcdoc="<h1>Escolha uma das opções acima!</h1><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In voluptas iste
+      consequatur ullam repellendus laudantium, alias at quia officiis nam
+      necessitatibus est, quaerat laborum, quam voluptatibus suscipit sapiente.
+      Laudantium, dolores! Lorem ipsum dolor sit amet consectetur adipisicing
+      elit. Blanditiis, asperiores illum? Amet consectetur asperiores ipsam
+      exercitationem aut deleniti rerum est animi molestias inventore corporis,
+      aspernatur ea labore repudiandae ipsum aliquid.</p><img src='imagens/cursoemvideo.png'>">
       >Infelizmente seu navegador não é compatível com isso!</iframe
     >
     <p>
